# M2K-Artifact

./: .gitattributes  .gitignore  Dockerfile  Dockerfile.github  LICENSE  README.md  env.sh  requirements.txt  setup.sh  setup_cn.sh
cuKLEE/: CMakeLists.txt  compile_cuda.py  run.py
cuKLEE/klee/examples/get_sign/: get_sign.bc  get_sign.ll
cuKLEE/klee/examples/regexp/: Regexp.bc  Regexp.ll
cuKLEE/klee/lib/Core/: AddressSpace.cpp  AddressSpace.h  CUDAKernelConfig.h  CallPathManager.cpp  CallPathManager.h  Context.cpp  Context.h  CoreStats.cpp  CoreStats.h  ExecutionState.cpp  ExecutionState.h  ExecutionTree.cpp  ExecutionTree.h  ExecutionTreeWriter.cpp  ExecutionTreeWriter.h  Executor.cpp  Executor.h  ExecutorUtil.cpp  ExternalDispatcher.cpp  ExternalDispatcher.h  GetElementPtrTypeIterator.h  ImpliedValue.cpp  ImpliedValue.h  LoopInfo.h  Memory.cpp  Memory.h  MemoryManager.cpp  MemoryManager.h  MergeHandler.cpp  MergeHandler.h  Searcher.cpp  Searcher.h  SeedInfo.cpp  SeedInfo.h  SpecialFunctionHandler.cpp  SpecialFunctionHandler.h  StatsTracker.cpp  StatsTracker.h  SymArrayMemory.h  TensorIterator.h  (+5 more)
cuKLEE/klee/lib/Expr/: ArrayCache.cpp  ArrayExprOptimizer.cpp  ArrayExprRewriter.cpp  ArrayExprVisitor.cpp  Assignment.cpp  AssignmentGenerator.cpp  Constraints.cpp  Expr.cpp  ExprBuilder.cpp  ExprEvaluator.cpp  ExprPPrinter.cpp  ExprSMTLIBPrinter.cpp  ExprUtil.cpp  ExprVisitor.cpp  Lexer.cpp  Parser.cpp  Updates.cpp
cuKLEE/klee/lib/Solver/: AssignmentValidatingSolver.cpp  STPBuilder.h  (+29 more)
cuKLEE/src/: ReplaceDeviceStubCallsPass.cpp  SignednessPropagationPass.cpp  main.cpp
(+6485 files in other folders)
